--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -296,6 +296,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('enhanced_dashboard') }}">
+                            <i class="fas fa-chart-line"></i> Enhanced Dashboard
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('alerts') }}">
                             <i class="fas fa-exclamation-triangle"></i> Alerts
                         </a>
